--- a/css/gaogao.css
+++ b/css/gaogao.css
@@ -116,7 +116,7 @@ img::-moz-selection {
 }
 
 #mainNav {
-  background-color: #EEEEEE;
+  background-color: black;
 }
 
 #mainNav .navbar-toggler {
@@ -126,7 +126,7 @@ img::-moz-selection {
   text-transform: uppercase;
   color: white;
   border: 0;
-  background-color: #ffcb6a;
+  background-color: #8400ffd5;
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
@@ -161,7 +161,7 @@ img::-moz-selection {
     padding-bottom: 25px;
     transition: padding-top 0.3s, padding-bottom 0.3s;
     border: none;
-    background-color: rgba(0, 0, 0, .3);
+    background-color: rgba(0, 0, 0, 0.822);
   }
   #mainNav .navbar-brand {
     font-size: 1.75em;
@@ -184,11 +184,13 @@ img::-moz-selection {
 header.masthead {
   text-align: center;
   color: white;
-  background-image: url("../img/bg-01.png");
+  background-image: url("../img/Abstract、Huawei、Mediapad、2019、High_Quality、Desktop壁紙_2880x1800[10wallpaper.com].jpg");
   background-repeat: repeat;
   background-attachment: scroll;
-  background-position: center center;
+  background-position: center;
   filter: saturate(0.8);
+  background-size: cover;
+  height: 850px;
 }
 
 header.masthead .intro-text {
@@ -680,4 +682,22 @@ ul.social-buttons li a {
 
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
   background-color: #ffcb6a;
+}
+@media (max-width: 380px){
+  header.masthead {
+    text-align: center;
+    color: white;
+    background-image: url("../img/Drop_\ Passions\ lead\ here.jpeg");
+    background-repeat: repeat;
+    background-attachment: scroll;
+    background-position: center;
+    filter: saturate(0.8);
+    width:100%;
+max-width: 100%;
+  }
+
+header.masthead .intro-text {
+    padding-top: 340px;
+    padding-bottom: 100px;
+}
 }
