--- a/css/style.css
+++ b/css/style.css
@@ -106,3 +106,8 @@ header.masthead .intro-text .intro-heading {
     max-width: 100%;
     height: auto;
   }
+
+  .intro-heading{
+    color: rgb(0, 217, 255);
+    text-shadow: rgb(0, 0, 0) 10px 10px 10px;;
+  }
