--- a/css/gaogao.css
+++ b/css/gaogao.css
@@ -700,4 +700,12 @@ header.masthead .intro-text {
     padding-top: 330px;
     padding-bottom: 100px;
 }
+
+.text_span{
+  display: block;
+}
+
+.text-muted{
+  font-size: 13px;
+}
 }
